--- a/citas/package.json
+++ b/citas/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^3.0.1",
+    "short-uuid": "^4.2.0",
     "tar": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
